# thingiCSG

./: .gitmodules  README.md
BOSL2/: fractal_tree.scad
Basic/: 50x50.scad  christmas_ball.scad  demo_reel.scad  fibo_bunny_difference_hires.scad  fibo_cylinders.scad  fibo_sphere.scad  fibo_sphere_100.scad  fibobench.scad  fibonacci.scad  fishy_sphere.scad  golf.scad  hollow_ball.scad  multi_rot_cube.scad  nasty_gear_0.scad  nasty_gear_1.scad  nasty_gear_2.scad  nasty_gear_3.scad  seven_sins_2.scad  seven_sins_3.scad  seven_sins_4.scad  sphere_union_bunnies.scad  spiky.scad  three_cubes.scad  two_cubes_2.scad  two_cubes_3.scad
CSGCompiler/: CMakeLists.txt  main.cpp
CSGCompiler/CSG/: b_stream.cpp  b_stream.h  builder.cpp  builder.h  builder_exe.cpp  builder_exe.h  common.cpp  common.h  compiler.cpp  compiler.h  defs.h  line_stream.cpp  line_stream.h  mesh.cpp  mesh.h  mesh_io.cpp  mesh_io.h  statistics.cpp  statistics.h  utils.cpp  utils.h
Large/: fibo_bunny_hires.scad  hollow_ball_bunny.scad
MiscThingiverse/: 3j45.scad  Bukobot_Fly_1.0.scad  Chainmail.scad  Coupler.scad  DNAHelixStand.scad  GameTokenBowl_v3.scad  NO_PRINT_feeder_body_for_grommet.stl  NO_PRINT_feeder_guide_arm.stl  README.md  README.md~  RM46_sub_10.scad  SnapConnectorLibrary.scad  ThumbWheelM3.scad  Wheels_2.scad  Wheels_3.scad  Wheels_4.scad  Wheels_7.scad  X-Axis_carridge2.scad  X-Axis_mount2.scad  YAF_body4grommet.scad  bird.stl  block.scad  brio_03.scad  brio_04.scad  brio_05.scad  brio_06.scad  brio_08.scad  brio_09.scad  brio_10.scad  brio_12.scad  brio_13.scad  c320.scad  c320_support.scad  (+50 more)
(+334 files in other folders)
